--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.github.arimorty:floatingsearchview:2.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'io.paperdb:paperdb:2.0'
+    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
